# DocSAF

./: .gitattributes  .gitignore  DATASET_TRAINING_README.md  README.md  TEST_SCRIPTS_README.md  demo_trained_model.py  plan.md  pyproject.toml  run_tests_example.py  test_dataset_evaluation.py  test_image_inference.py
.github/workflows/: ci.yml
configs/: cord.yaml  default.yaml  doclaynet.yaml  docvqa.yaml  funsd.yaml  sroie.yaml
data/: processing.py  utils.py
data/archives/: infer_LayoutLMv3_for_Doclaynet.py  infer_LayoutXLM_doclaynet.py  inference_on_LayoutXLM_base_model_finetuned_on_DocLayNet_base_in_any_language_at_levellines_ml384.ipynb  test.py  visualize_data.ipynb
data/archives/__MACOSX/: ._sroie
data/docvqa/: test_v1.0_withQT.json
data/docvqa/ocrs/: ffbf0023_4.json  ffbf0023_6.json  ffbf0227_1.json  ffbg0227_2.json  ffbg0227_3.json  ffbg0227_4.json  ffbl0226_3.json  ffbx0227_7.json  ffcc0228_1.json  ffcn0226_13.json  ffcn0226_14.json  ffcn0226_16.json  ffcn0226_5.json  ffdh0224_1.json  ffdh0227_1.json  ffdh0227_3.json  ffdh0227_4.json  ffdw0217_13.json  ffdw0217_14.json  ffdw0217_15.json  ffgf0001_2.json  ffgf0001_3.json  ffgf0001_5.json  ffgf0001_6.json  ffgf0001_7.json  ffgf0001_8.json  ffgf0001_9.json  ffgk0226_1.json  ffhl0226_1.json  ffhv0228_9.json  ffhx0227_1.json  ffhx0227_2.json  ffjh0077_1.json  ffjk0226_1.json  ffjv0228_10.json  ffjv0228_11.json  ffjv0228_3.json  (+12719 more)
data/funsd/: Fine_tune_LayoutLMv3_on_FUNSD_(HuggingFace_Trainer).ipynb
data/sroie/: note.txt
docsaf/: pyproject.toml
docsaf/configs/: default.yaml
docsaf/tests/: __init__.py  test_field.py  test_saliency.py
scripts/: demo_notebook.ipynb  download_surrogates.sh  run_examples.py  test_docsaf.py  test_surrogates.py  train_docsaf.py
src/docsaf/: __init__.py  eot_light.py  eval_harness.py  field.py  infer_once.py  objective.py  ocr.py  saliency.py  surrogates.py  train_universal.py  utils.py
test_results/: detailed_results_20250910_172049.json  evaluation_summary_20250910_172049.json
tests/: __init__.py  test_eval_harness.py  test_field.py  test_saliency.py  test_surrogates.py
(+3511 files in other folders)
